drop useless index=0,media=disk qemu parameters

--- a/hurd/running/debian/qemu_image.mdwn
+++ b/hurd/running/debian/qemu_image.mdwn
@@ -16,7 +16,7 @@ Usage:
 
     $ wget http://people.debian.org/~sthibault/hurd-i386/debian-hurd.img.tar.gz
     $ tar -xz < debian-hurd.img.tar.gz
-    $ qemu -m 512 -net nic,model=rtl8139 -net user -drive cache=writeback,index=0,media=disk,file=$(echo debian-hurd-*.img)
+    $ qemu -m 512 -drive cache=writeback,file=$(echo debian-hurd-*.img)
 
 If you have troubles extracting the image, you can use
 the gz version <http://people.debian.org/~sthibault/hurd-i386/debian-hurd.img.gz>,
