--- a/hurd/running/qemu.mdwn
+++ b/hurd/running/qemu.mdwn
@@ -33,7 +33,7 @@ volunteers and may not have been tested extensively.
 
 * [Disk image](http://draketo.de/dateien/hurd/bab-hurd-qemu-2008-10-29.img.tar.bz2) 
   with a short intro on translators.  Just start it with `qemu -m 512
-  -drive cache=writeback,index=0,media=disk,file=disk_image.img`.
+  -drive cache=writeback,file=disk_image.img`.
   It should work without any of the configuration below. If you want to know what you can do 
   with it, please have a look at [[its_wikipage|hurd/running/qemu/babhurd_image]]. And when 
   you use it, please [tell me your experience with it](http://draketo.de/contact)! - [[community/weblogs/ArneBab]]
@@ -139,7 +139,7 @@ First off you will need to create a disk image using `qemu-img`. I have set mine
 
 Next you will want to start up QEMU and begin the installation process.
 
-    $ qemu -m 512 -drive cache=writeback,index=0,media=disk,file=hd0.img -cdrom debian-7.0-hurd-i386-NETINST-1.iso -net nic,model=rtl8139 -net user
+    $ qemu -m 512 -drive cache=writeback,file=hd0.img -cdrom debian-7.0-hurd-i386-NETINST-1.iso -net nic,model=rtl8139 -net user
 
 Now at his point do the regular install using `hd0` as your harddrive. Partition it and install the base system.
 
@@ -187,7 +187,7 @@ Once you have finished installing the base system (might take some time) the sys
 
 Starting qemu/qemu-kvm:
 
-    $ kvm -m 512 -net nic,model=rtl8139 -net user,hostfwd=tcp::5555-:22 -drive cache=writeback,index=0,media=disk,file=hd0.img -vga vmware
+    $ kvm -m 512 -net nic -net user,hostfwd=tcp::5555-:22 -drive cache=writeback,file=hd0.img -vga vmware
     vmsvga_value_write: guest runs Linux.
 
 Note: See below on port forwarding in the networking section.
@@ -310,7 +310,7 @@ This is the recommended way to work with a Command Line Interface (CLI) since al
 
 a) with ssh (assuming you have installed openssh-server)
 
-    $ kvm -m 512 -net nic,model=rtl8139 -net user,hostfwd=tcp::5555-:22 -drive cache=writeback,index=0,media=disk,file=hd0.img &
+    $ kvm -m 512 -net nic -net user,hostfwd=tcp::5555-:22 -drive cache=writeback,file=hd0.img &
 
 Logging in to the running Hurd:
 
@@ -327,7 +327,7 @@ Copying files:
 
 b) with telnet (assuming you have installed a telnet server, like telnetd)
 
-    $ kvm -m 512 -net nic,model=rtl8139 -net user,hostfwd=tcp::5556-:23 -drive cache=writeback,index=0,media=disk,file=hurd-install.qemu &
+    $ kvm -m 512 -net nic -net user,hostfwd=tcp::5556-:23 -drive cache=writeback,file=hurd-install.qemu &
 
 Logging in to the running Hurd:
 
@@ -368,7 +368,7 @@ Now it is time to start-up your QEMU Hurd system and get networking going in the
 
 **Important:** Remember you may need to use the `-M isapc` or `-isa` flag if using an older version of the gnumach package.
 
-    $ qemu -m 512 -drive cache=writeback,index=0,media=disk,file=hd0.img -cdrom debian-K9-hurd-i386-CD1.iso -fda floppy.img -boot a -net nic -net tap
+    $ qemu -m 512 -drive cache=writeback,file=hd0.img -cdrom debian-K9-hurd-i386-CD1.iso -fda floppy.img -boot a -net nic -net tap
 
 Once you have logged in as `root` run the `pfinet` translator with values that apply to your network. Think of your QEMU client as another computer in your network.
 
