--- a/hurd/running/qemu/babhurd_image.mdwn
+++ b/hurd/running/qemu/babhurd_image.mdwn
@@ -6,8 +6,7 @@ What this little Hurd image can do
 This is the README file accompanying a 
 [disk\_image](http://draketo.de/dateien/hurd/bab-hurd-qemu-2008-10-29.img.tar.bz2) for 
 [[running the GNU/Hurd via qemu|hurd/running/qemu]].  To run the disk image,
-just use `qemu -m 512 -drive
-cache=writeback,index=0,media=disk,file=disk_image.img`.
+just use `qemu -m 512 -drive cache=writeback,file=disk_image.img`.
 
 You can find the custom *.bashrc* used to tell the user about it as well as this text itself 
 in the Mercurial repository [hurd_intro](http://bitbucket.org/ArneBab/hurd_intro). 
