--- a/unsorted/MakeImage.mdwn
+++ b/unsorted/MakeImage.mdwn
@@ -53,7 +53,7 @@ I use this for testing OSKit...
 
 ## <a name="Booting_Qemu"> Booting Qemu </a>
 
-    qemu -m 512 -user-net -isa -boot d -cdrom grub.iso -drive cache=writeback,index=0,media=disk,file=gnu.img
+    qemu -m 512 -boot d -cdrom grub.iso -drive cache=writeback,file=gnu.img
 
 The switch `-isa` is for current gnumach.gz on hda.
 
