advise to patch debian packages instead of building from upstream

--- a/contributing.mdwn
+++ b/contributing.mdwn
@@ -71,6 +71,12 @@ listed there, you won't be able to significantly contribute to the Hurd.
 You can also have a look at the
 [starting guide talk](https://fosdem.org/2015/schedule/event/hurd/).
 
+In terms of building and hacking on software, the easiest way to avoid having to
+understand the whole picture from the start is install the Debian distribution,
+and patch over the Debian source code. Installing from upstream source is much
+more complexe since you would need to know which piece fits where. Building and
+installing patched packages is much more simple.
+
 For more reading resources, please see these web pages, for example,
 [[Hurd_documentation|hurd/documentation]] and
 [[Mach_documentation|microkernel/mach/documentation]] for links to a bunch of
