Add Linux Pro Magazine cover article

--- a/media_appearances.mdwn
+++ b/media_appearances.mdwn
@@ -100,6 +100,10 @@ A lot of stuff is missing here.
         released](http://www.osnews.com/story/27059/Debian_GNU_Hurd_2013_released)*,
         OS News, Thom Holwerda, 2013-05-22
 
+      * *[Exploring GNU/Hurd – The lost operating system]
+        (http://www.linux-magazine.com/Issues/2013/154/Exploring-the-Hurd/%28language%29/eng-US)*,
+	Linux Pro Magazine #154, 2013-05 (front cover!!)
+
 ## February
 
   * FOSDEM: {{$community/meetings/fosdem_2013#thibault_hurd}}
