Add mozjs24 to problematic packages

--- a/open_issues/problematic_packages.mdwn
+++ b/open_issues/problematic_packages.mdwn
@@ -30,3 +30,4 @@ This page lists the few packages whose build makes the Debian buildd box crash a
   * php-yac
   * gnu-smalltalk
   * globus-gram-job-manager
+  * mozjs24
