GNU Free System Distribution Guidelines (GNU FSDG)
Wording based on a suggestion by Richard Stallman <rms@gnu.org>.

--- a/hurd/running/distrib.mdwn
+++ b/hurd/running/distrib.mdwn
@@ -1,3 +1,14 @@
+[[!template id=note text="""**GNU Free System Distribution Guidelines (GNU
+FSDG)**
+
+The [Free Software Foundation](http://www.fsf.org/) can't recommend Debian
+GNU/Hurd or the Arch distribution; we must suppose that they don't meet our
+freedom standards any more than Debian GNU/Linux and the Arch distribution
+based on the Linux kernel do.  Likewise we have not evaluated other GNU/Hurd
+distributions in regard to ethical criteria.  Please visit
+<http://www.gnu.org/distros/free-system-distribution-guidelines.html> to learn
+what those standards are."""]]
+
 Working distributions of GNU/Hurd: 
 
 * [[Debian]]
