Debian GNU/Hurd 2015

--- a/history.mdwn
+++ b/history.mdwn
@@ -169,4 +169,5 @@ mailing lists.
     released|news/2013-09-27]].
   * [...]
   * 2015: [...], [[GNU Hurd 0.6, GNU Mach 1.5, GNU MIG 1.5
-    released|news/2015-04-10-releases]].
+    released|news/2015-04-10-releases]], [[Debian GNU/Hurd
+    2015|news/2015-04-29-debian_gnu_hurd_2015]].
