--- a/hurd/status.mdwn
+++ b/hurd/status.mdwn
@@ -1,5 +1,5 @@
 [[!meta copyright="Copyright © 2001, 2002, 2007, 2008, 2009, 2010, 2011, 2012,
-2013 Free Software Foundation, Inc."]]
+2013, 2015 Free Software Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -50,9 +50,10 @@ align="right"
 [[Debian GNU/Hurd|running/debian]] closely tracks the progress of the Hurd (and
 often includes new features).  They offer *LiveCDs and QEMU images* to
 test-drive the Hurd, and about 78% of the Debian software archive are
-available.  Along with the official Debian "wheezy" release (but not as an
-official Debian release), in May 2013 the Debian GNU/Hurd team released [[Debian
-GNU/Hurd 2013|news/2013-05-debian_gnu_hurd_2013]].
+available.  Along with the official Debian "jessie" release (but not as an
+official Debian release), in April 2015 the [[Debian
+GNU/Hurd|hurd/running/debian]] team released [[Debian GNU/Hurd
+2015|news/2015-04-29-debian_gnu_hurd_2015]].
 
 [[hurd/running/Arch_Hurd]] offers *LiveCDs* for testing and installation.
 
