--- a/hurd/libstore/nbd_store.mdwn
+++ b/hurd/libstore/nbd_store.mdwn
@@ -1,5 +1,5 @@
-[[!meta copyright="Copyright © 2007, 2008, 2009, 2012 Free Software Foundation,
-Inc."]]
+[[!meta copyright="Copyright © 2007, 2008, 2009, 2012, 2015 Free Software
+Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -45,4 +45,11 @@ Perhaps the protocol was extended?
 
 # Open Issues
 
-  * [[!GNU_Savannah_task 5722]]
+## [[!GNU_Savannah_task 5722]]
+
+## Platform-specific Error Values in the Wire Protocol
+
+See, for example, the threads starting at [[!message-id
+"1431012374-14113-2-git-send-email-pbonzini@redhat.com"]], [[!message-id
+"1431078628-7856-1-git-send-email-pbonzini@redhat.com"]], [[!message-id
+"1431014292-24645-1-git-send-email-pbonzini@redhat.com"]].
