Interlink NBD pages

--- a/hurd/libstore/nbd_store.mdwn
+++ b/hurd/libstore/nbd_store.mdwn
@@ -25,6 +25,8 @@ Perhaps the protocol was extended?
 
 ### IRC, freenode, #hurd, 2012-12-20
 
+[[!tag open_issue_hurd]]
+
     <youpi> if somebody has time to spend, building the nbd package makes
       pfinet crash
 
