--- a/microkernel/mach/external_pager_mechanism.mdwn
+++ b/microkernel/mach/external_pager_mechanism.mdwn
@@ -1,5 +1,5 @@
-[[!meta copyright="Copyright © 2002, 2007, 2008, 2010, 2011, 2012 Free Software
-Foundation, Inc."]]
+[[!meta copyright="Copyright © 2002, 2007, 2008, 2010, 2011, 2012, 2015 Free
+Software Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -136,8 +136,8 @@ resource, yet it cannot safely transfer its handle to the client.  In
 this case, it would proxy the requests.
 
 (C) The storeio server contacts, for instance, a [[device_driver]] to do
-the read.  This could also be a network block device (the NBD server
-in GNU/Linux), a file, a memory object, etc.
+the read.  This could also be a [[network block device (the NBD server
+in GNU/Linux)|hurd/libstore/nbd_store]], a file, a memory object, etc.
 
 (D) The device driver allocates an [[anonymous_page]] from the
 [[default_pager]] and reads the data into it.  Once all of the operations are
