--- a/open_issues/problematic_packages.mdwn
+++ b/open_issues/problematic_packages.mdwn
@@ -16,7 +16,7 @@ This page lists the few packages whose build makes the Debian buildd box crash a
 
 * Kill pfinet
 
-  * nbd
+  * [[nbd|hurd/libstore/nbd_store]]
   * socklog
 
 * Kill the session
