Fix description of the 2015 Debian release.

--- a/contributing.mdwn
+++ b/contributing.mdwn
@@ -126,8 +126,9 @@ For guidelines, please have a look at the dedicated [[porting_page|hurd/porting]
 
 ### Debian GNU/Hurd
 
-Along with the official Debian "wheezy" release (but not as an official Debian
-release), in April 2015 the Debian GNU/Hurd team released [[Debian GNU/Hurd
+Along with the official Debian "jessie" release (but not as an
+official Debian release), in April 2015 the [[Debian
+GNU/Hurd|hurd/running/debian]] team released [[Debian GNU/Hurd
 2015|news/2015-04-29-debian_gnu_hurd_2015]].
 There is a goal of getting Debian GNU/Hurd into shape for a technology
 preview for integration as a proper Debian release candidate.
