Mention VT_ACTIVATE todo

--- a/open_issues/console_vs_xorg.mdwn
+++ b/open_issues/console_vs_xorg.mdwn
@@ -11,6 +11,17 @@ License|/fdl]]."]]"""]]
 [[!tag open_issue_glibc open_issue_hurd]]
 
 
+# console switching and DMs
+
+Something like VT_ACTIVATE would need to be implemented to allow console
+switching. In the meanwhile xorg refuses the vtx option, thus making lightdm &
+such fail with an Xserver error:
+
+       (EE) Fatal server error:
+       (EE) Unrecognized option: vt7
+
+In the meanwhile DMs could be taught not to use the vtx option.
+
 # IRC, freenode, #hurd, 2012-08-30
 
     <gean> braunr: I have some errors about keyboard in the xorg log, but
