[ADA4HURD] update results for get_dirents implementation

--- a/hurd/documentation/netfs_ada_results.mdwn
+++ b/hurd/documentation/netfs_ada_results.mdwn
@@ -145,3 +145,29 @@ is included in the section entitled
     * check\_open\_permissions
     * Validate\_Stat
     * Not Implemented Netfs\_Implementation.Get\_Dirents
+
+## Rev 98c74b2027c9
+
+  * Get_Dirents implemented
+    * Tested with depth option set to two (only regular files in node)
+
+### ls -la .
+
+  * OK
+
+### ls -la node
+
+  * OK, display leafs regular files
+  * Call Sequence
+    * Validate\_Stat
+    * Check\_Open\_Permissions
+    * Validate\_Stat
+    * Validate\_Stat
+    * Check\_Open\_Permissions
+    * Validate\_Stat
+    * enter get dirents netfs_implementation.adb:141 Netfs_Implementation.Get_Dirents
+      * then attemp\_lookup for each leaf
+
+### cd node
+  * OK
+    * ls in node directory display leafs
