the i_file_acl_hi warning got fixed in e2fsprogs 1.42.13

--- a/faq/fsck.mdwn
+++ b/faq/fsck.mdwn
@@ -21,4 +21,4 @@ see [[open_issues/ext2fs_dtime]]
 
     /dev/hd0s1: i_file_acl_hi for inode 81872 (/proc) is 32, shoud be 0.
 
-see [[open_issues/e2fsck_i_file_acl_hi]]
+see [[open_issues/e2fsck_i_file_acl_hi]], fixed in e2fsprogs 1.42.13
