--- a/open_issues/e2fsck_i_file_acl_hi.mdwn
+++ b/open_issues/e2fsck_i_file_acl_hi.mdwn
@@ -8,6 +8,8 @@ Sections, no Front-Cover Texts, and no Back-Cover Texts.  A copy of the license
 is included in the section entitled [[GNU Free Documentation
 License|/fdl]]."]]"""]]
 
+Fixed in e2fsprogs 1.42.13
+
 IRC, unknown channel, unknown date.
 
     <Duck> something's broken in ext2, fsck, or the like
@@ -36,5 +38,7 @@ IRC, unknown channel, unknown date.
 
 This is due to an erroneous read/write from e2fsck, see
 <http://sourceforge.net/tracker/?func=detail&aid=3379227&group_id=2406&atid=102406>.
+
+Fixed in e2fsprogs 1.42.13
 
 See [[!debbug 760275]]
