[ADA4HURD] minor update of results for get_dirents implementation

--- a/hurd/documentation/netfs_ada_results.mdwn
+++ b/hurd/documentation/netfs_ada_results.mdwn
@@ -171,3 +171,11 @@ is included in the section entitled
 ### cd node
   * OK
     * ls in node directory display leafs
+
+### ls node then ls node/path\ 2
+  * OK
+    * display leafs in directory path 2
+
+### ls node/path\ 2
+  * NOK
+    * display message : "ls: cannot access node/path 2: No such file or directory"
