[ADA4HURD] update of results for depth parameter set to 3

--- a/hurd/documentation/netfs_ada_results.mdwn
+++ b/hurd/documentation/netfs_ada_results.mdwn
@@ -172,10 +172,14 @@ is included in the section entitled
   * OK
     * ls in node directory display leafs
 
+## Rev 2270e1726850
+
+  * depth parameter goes from 2 to 3
+
 ### ls node then ls node/path\ 2
   * OK
     * display leafs in directory path 2
 
 ### ls node/path\ 2
-  * NOK
-    * display message : "ls: cannot access node/path 2: No such file or directory"
+  * OK
+    * needed to fix a missing update in the child node (because update was done only on get_dirents call)
