Added a note clarifying the need to use IDE disk controller, to help future users.

--- a/hurd/running/virtualbox.mdwn
+++ b/hurd/running/virtualbox.mdwn
@@ -21,6 +21,7 @@ supported.
 The network controller should be configured as PCnet-PCI II or PCNet-FAST III
 for instance. INTEL PRO or Paravirtualized Network do not work.
 
+Note: If your Hurd image freezes on startup with "start ext2fs: ext2fs: device:hd0s1: No such device or address", then you may need to manually edit the hard disk controller to be "IDE", because VirtualBox defaults to "SATA" which does not work. Go in to the "Storage" tab and check whether there is an entry for "Controller: SATA". If the SATA entry exists and the Hurd disk image is attached to it, delete the SATA controller and then add a new hard disk under "Controller: IDE". Restart the virtual machine. The hard disk should now be accessible via an IDE interface and Hurd should start successfully and reach the login prompt. (This is the case on VirtualBox 4.3.28 on Mac OS.)
 
 ## Converting from qemu image
 
