[ADA4HURD] read try results on netfs Ada binding

--- a/hurd/documentation/netfs_ada_results.mdwn
+++ b/hurd/documentation/netfs_ada_results.mdwn
@@ -183,3 +183,17 @@ is included in the section entitled
 ### ls node/path\ 2
   * OK
     * needed to fix a missing update in the child node (because update was done only on get_dirents call)
+
+### cat node/path\ 2/leaf\ 1
+  * NOK
+    * Call sequence
+      * Validate\_Stat
+      * Check\_Open\_Permissions
+      * Attempt\_Lookup
+      * Validate\_Stat
+      * Attempt\_Lookup
+      * Validate\_Stat
+      * Check\_Open\_Permissions
+      * Validate_Stat
+      * netfs\_implementation.adb:113 Netfs\_Implementation.Attempt\_Read
+    * need for attemp\_read implementation
