[ADA4HURD] report of read implementation

--- a/hurd/documentation/netfs_ada_results.mdwn
+++ b/hurd/documentation/netfs_ada_results.mdwn
@@ -197,3 +197,8 @@ is included in the section entitled
       * Validate_Stat
       * netfs\_implementation.adb:113 Netfs\_Implementation.Attempt\_Read
     * need for attemp\_read implementation
+
+## Rev 3126bd9ce609
+
+  * Read is implemented
+  * next step : write
