[ADA4HURD] report of write try

--- a/hurd/documentation/netfs_ada_results.mdwn
+++ b/hurd/documentation/netfs_ada_results.mdwn
@@ -202,3 +202,14 @@ is included in the section entitled
 
   * Read is implemented
   * next step : write
+
+### echo "elle souffle" > node/path\ 2/leaf\ 1
+  * NOK
+    * command result - bash: node/path 2/leaf 1: Permission denied
+    * Call sequence
+      * Validate\_Stat
+      * Check\_Open\_Permissions
+      * Attempt_Lookup path 2                                                                                                                                                                                                                     * Validate\_Stat
+      * Attempt\_Lookup leaf 1                                                                                                                                                                                                                    * Validate\_Stat
+      * Validate_Stat
+      * Check\_Open\_Permissions - Check failed WRITE 1073741837
