--- a/hurd/documentation/netfs_ada_results.mdwn
+++ b/hurd/documentation/netfs_ada_results.mdwn
@@ -213,3 +213,15 @@ is included in the section entitled
       * Attempt\_Lookup leaf 1                                                                                                                                                                                                                    * Validate\_Stat
       * Validate_Stat
       * Check\_Open\_Permissions - Check failed WRITE 1073741837
+
+## Rev 242f59899045
+  * NOK
+    * command result - bash: node/path 2/leaf 1: Operation not supported
+    * Call sequence
+      * Validate\_Stat
+      * Check\_Open\_Permissions
+      * Attempt_Lookup path 2                                                                                                                                                                                                                     * Validate\_Stat
+      * Attempt\_Lookup leaf 1                                                                                                                                                                                                                    * Validate\_Stat
+      * Validate_Stat
+      * Check\_Open\_Permissions
+      * netfs\_implementation.adb:366 Netfs\_Implementation.Attempt\_Set\_Size : not yet implemented
