--- a/hurd/documentation/netfs_ada_results.mdwn
+++ b/hurd/documentation/netfs_ada_results.mdwn
@@ -215,6 +215,10 @@ is included in the section entitled
       * Check\_Open\_Permissions - Check failed WRITE 1073741837
 
 ## Rev 242f59899045
+
+  * nore are xcreated with 0755 permission
+
+### echo "elle souffle" > node/path\ 2/leaf\ 1
   * NOK
     * command result - bash: node/path 2/leaf 1: Operation not supported
     * Call sequence
@@ -225,3 +229,20 @@ is included in the section entitled
       * Validate_Stat
       * Check\_Open\_Permissions
       * netfs\_implementation.adb:366 Netfs\_Implementation.Attempt\_Set\_Size : not yet implemented
+
+## Rev dceb291aaf1c
+
+  * Set_Size minimal implementation
+
+### echo "elle souffle" > node/path\ 2/leaf\ 1
+  * NOK
+    * command result - bash: node/path 2/leaf 1: Operation not supported
+    * Call sequence
+      * Validate\_Stat
+      * Check\_Open\_Permissions
+      * Attempt_Lookup path 2                                                                                                                                                                                                                     * Validate\_Stat
+      * Attempt\_Lookup leaf 1                                                                                                                                                                                                                    * Validate\_Stat
+      * Validate_Stat
+      * Check\_Open\_Permissions
+      * Attempt\_Set\_Size
+      * netfs_implementation.adb:481 Netfs\_Implementation.Attemp\_Write
