[ADA4HURD] report of 4rd write try with first write implementation, seems OK

--- a/hurd/documentation/netfs_ada_results.mdwn
+++ b/hurd/documentation/netfs_ada_results.mdwn
@@ -246,3 +246,10 @@ is included in the section entitled
       * Check\_Open\_Permissions
       * Attempt\_Set\_Size
       * netfs_implementation.adb:481 Netfs\_Implementation.Attemp\_Write
+
+## Rev 93311515a6c2
+
+  * Attempt_Write is implemented
+
+### echo "elle souffle" > node/path\ 2/leaf\ 1
+  * OK
