--- a/open_issues/problematic_packages.mdwn
+++ b/open_issues/problematic_packages.mdwn
@@ -31,3 +31,4 @@ This page lists the few packages whose build makes the Debian buildd box crash a
   * gnu-smalltalk
   * globus-gram-job-manager
   * mozjs24
+  * musescore
