report result of an unimplemented mkdir

--- a/hurd/documentation/netfs_ada_results.mdwn
+++ b/hurd/documentation/netfs_ada_results.mdwn
@@ -253,3 +253,16 @@ is included in the section entitled
 
 ### echo "elle souffle" > node/path\ 2/leaf\ 1
   * OK
+
+## Rev 8395215263d3
+
+  * Test of mkdir
+
+### mkdir node/toto
+
+  * NOK
+    * command result - mkdir: cannot create directory ‘node/toto’: Operation not supported
+  * Call sequence
+    * Validate\_Stat
+    * Check\_Open\_Permissions
+    * netfs_implementation.adb:421 Netfs_Implementation.Attempt_Mkdir
