minor change to ada4hurd main page : mention how to run netfs tests

--- a/hurd/ada4hurd.mdwn
+++ b/hurd/ada4hurd.mdwn
@@ -61,3 +61,8 @@ Ada4Hurd provides tools and examples to ease Ada development in Hurd. It is at a
   * Play with xmladafs
 
     $ make trans_on
+
+  * Run netfs tests
+    * In netfs\_base directory
+
+    $ make trans\_dbg\_on
