[ADA4HURD] mkdir test for netfs_base

--- a/hurd/documentation/netfs_ada_results.mdwn
+++ b/hurd/documentation/netfs_ada_results.mdwn
@@ -266,3 +266,12 @@ is included in the section entitled
     * Validate\_Stat
     * Check\_Open\_Permissions
     * netfs_implementation.adb:421 Netfs_Implementation.Attempt_Mkdir
+
+## Rev 3425f5c837fb
+
+  * mkdir implementation
+
+### mkdir node/toto
+
+  * OK
+  * need to create leaf now : write to an inexistent file
