--- a/community/meetings.mdwn
+++ b/community/meetings.mdwn
@@ -13,11 +13,11 @@ License|/fdl]]."]]"""]]
 
 # Upcoming
 
-  * [[FOSDEM_2015]]
-
 
 # Past
 
+  * [[DebConf15]]
+  * [[FOSDEM_2015]]
   * [[FOSDEM_2014]]
   * [[GNU Hackers Meeting, 2013, Paris|ghm2013]]
   * [[FOSDEM_2013]]
