--- a/documentation.mdwn
+++ b/documentation.mdwn
@@ -87,6 +87,7 @@ from userlandish interfaces (Hurd) or from the micro kernel itself (Mach).
 ## 2015
 
   * FOSDEM: {{$community/meetings/fosdem_2015#thibault_hurd}}
+  * Debconf 15: {{$community/meetings/debconf15#youpi_hurd}}
 
 ## 2014
 
