Add transcript link

--- a/community/meetings/debconf15.mdwn
+++ b/community/meetings/debconf15.mdwn
@@ -20,6 +20,6 @@ License|/fdl]]."]]"""]]
 youpi_hurd:
 
   "presentation (including video) by Samuel Thibault: [*Debian GNU/Hurd Status update*](https://summit.debconf.org/debconf15/meeting/298/debian-gnuhurd-status-update/)
-  ([slides](http://people.debian.org/~sthibault/hurd-i386/2015-08-17-debconf.pdf)|[video](http://meetings-archive.debian.net/pub/debian-meetings/2015/debconf15/Debian_GNUHurd_status_update.webm))"
+  ([slides](http://people.debian.org/~sthibault/hurd-i386/2015-08-17-debconf.pdf)|[video](http://meetings-archive.debian.net/pub/debian-meetings/2015/debconf15/Debian_GNUHurd_status_update.webm)|[transcript](https://people.debian.org/~sthibault/hurd-i386/2015-08-17-debconf.txt))"
 
 """]]
