Mention issue with fifo perms

--- a/contributing.mdwn
+++ b/contributing.mdwn
@@ -114,6 +114,7 @@ lookups|hurd/interface/dir_lookup]] work.
 * Improve our [[FUSE library|hurd/libfuse]].
 * Add a relatime or lazytime option to ext2fs.
 * Fix our [[open_issues/symlink_translator]].
+* Fix chmod on fifos: mkfifo foo ; sudo chmod g+w foo
 
 <a name="porting"></a>
 ## Porting Packages
