emacs24 is posing problems

--- a/open_issues/problematic_packages.mdwn
+++ b/open_issues/problematic_packages.mdwn
@@ -25,3 +25,7 @@ This page lists the few packages whose build makes the Debian buildd box crash a
   * idzebra
   * ruby-hiredis
   * libxs
+
+* ext2fs gets stuck
+
+  * emacs24
