public_hurd_boxen/installation/darnassus: post-update hook

--- a/public_hurd_boxen/installation/darnassus.mdwn
+++ b/public_hurd_boxen/installation/darnassus.mdwn
@@ -69,6 +69,10 @@ License|/fdl]]."]]"""]]
     $ mkdir hurd-web.git && GIT_DIR=hurd-web.git git init
     [...]
 
+Configure the [`post-update` hook](http://ikiwiki.info/post-commit/):
+
+    $ ln -is ../../public_html.workspace.update hurd-web.git/hooks/post-update
+
 For a full rebuild:
 
     $ ./public_html.workspace.generate\ wrappers --rebuild
