public_hurd_boxen/installation/darnassus: detail modified ikiwiki package

--- a/public_hurd_boxen/installation/darnassus.mdwn
+++ b/public_hurd_boxen/installation/darnassus.mdwn
@@ -18,11 +18,21 @@ License|/fdl]]."]]"""]]
 
     Installation done by Richard.
 
-  * ikiwiki libcgi-session-perl libtext-csv-perl libcgi-formbuilder-perl
-    libauthen-passphrase-perl libnet-openid-consumer-perl
-    libterm-readline-gnu-perl libgravatar-url-perl
-    librpc-xml-perl libtext-wikiformat-perl libhighlight-perl perlmagick
-    graphviz texinfo
+  * ikiwiki
+
+    Modified package, `ikiwiki_3.20140227_all.deb`, which contains some patch
+    (not yet in a suitable form for upstream) to get rendering of our news
+    pages correct (correct?).  Thus, set the package to `hold` with `dpkg
+    --set-selections`.  To avoid [garbled non-ascii characters in body in web
+    interface](https://ikiwiki.info/bugs/garbled_non-ascii_characters_in_body_in_web_interface/),
+    manually `patch /usr/share/perl5/IkiWiki/CGI.pm` with upstream commits
+    feb21ebfacb341fc34244e1c9b8557fd81d1dfc1, and
+    f35c6a97d1837a37879996211bd6f3c8eb356df9 ([[!debbug 776181]]).
+
+      * libcgi-session-perl libtext-csv-perl libcgi-formbuilder-perl
+        libauthen-passphrase-perl libnet-openid-consumer-perl
+        libterm-readline-gnu-perl libgravatar-url-perl librpc-xml-perl
+        libtext-wikiformat-perl libhighlight-perl perlmagick graphviz texinfo
 
       * libemail-send-perl (for my *sendmail vs. ikiwiki* patch)
 
@@ -149,19 +159,7 @@ The goal is that robots rather index the official pages,
     <tschwinge> Still trying to figure out what I had done there...  ;-)
     <tschwinge> OK, I again understand the setup.  Last been touched in the
       2008/2009 timeframe.  ;-)
-    <braunr> :)
-    <tschwinge> braunr: Please use the following ikiwiki packages: dpkg -i
-      ~tschwinge/tmp/ikiwiki_3.20110608_all.deb
-    <braunr> what makes this package special ?
-    <tschwinge> Some patch that I added to get rendering of our news pages
-      correct.
-    <braunr> ok
-    <tschwinge> I have not updated it ever since (and the patch was not yet in
-      a suitable form for upstream).
-    <tschwinge> Nothing major.
-    <braunr> tschwinge: why is the ikiwiki package status hi ?
-    <tschwinge> braunr: I set it to hold.
-    <braunr> ah ok
+
     <braunr> so you finished your pat i suppose
     <braunr> i'll install apache
     <braunr> part*
