[ADA4HURD] test result of create file with echo

--- a/hurd/documentation/netfs_ada_results.mdwn
+++ b/hurd/documentation/netfs_ada_results.mdwn
@@ -275,3 +275,13 @@ is included in the section entitled
 
   * OK
   * need to create leaf now : write to an inexistent file
+
+### echo "elle souffle" > node/test
+
+  * NOK
+    * command result - bash: node/test: Not a directory
+  * CAll sequence
+    * Validate\_Stat
+    * Check\_Open\_Permissions
+    * Attempt\_Lookup
+    * Attempt\_Create\_File
