--- a/contributing.mdwn
+++ b/contributing.mdwn
@@ -89,8 +89,9 @@ Here is a list of small hacks, which can serve as entries into the Hurd code for
 people who would like to dive into the code but just lack a "somewhere to begin
 with".
 
-* Add `UTIME_NOW` and `UTIME_OMIT`.  It is a matter of taking the BSD values, add the `#define`s to the proper header, and implement the support in `*_S_file_utimes` functions.
+* Add `UTIME_NOW` and `UTIME_OMIT`.  It is a matter of taking the BSD values, add the `#define`s to the proper header, and implement the support in `*_S_file_utimes` functions. Flávio Cruz is having a look.
     See also [[!debbug 762677]].
+* cat /dev/null/ should fail with ENOTDIR, i.e. make libdiskfs's diskfs_S_dir_lookup properly pass the trailing / to translators (so that libtrivfs (which null is based on) trivfs_S_dir_lookup returns ENOTDIR). See also [[!debbug 785404]]
 * Some translators do not support [[hurd/fsysopts]], i.e. support for the
 file_get_fs_options and fsys_set_options RPCs.
 * Extend `device_read`/`device_write` into supporting > 2TiB disk sizes.
