update kernel version

--- a/unsorted/CrossHurd.mdwn
+++ b/unsorted/CrossHurd.mdwn
@@ -36,9 +36,9 @@ Before we reboot you must setup a Hurd entry in the menu.lst file of Grub. Do it
 
 The first two runs (reboots) you must run the Hurd in single-user mode!
 
-    title GNU (kernel GNUmach 1.3)
+    title GNU (kernel GNUmach 1.5)
       root (hd1,1)
-      kernel /boot/gnumach.gz root=device:hd1s2 -s
+      kernel /boot/gnumach-1.5-486.gz root=device:hd1s2 -s
       module /hurd/ext2fs.static                           \
            --multiboot-command-line=${kernel-command-line} \
            --host-priv-port=${host-port}                   \
