--- a/hurd/running/debian/CrossInstall.mdwn
+++ b/hurd/running/debian/CrossInstall.mdwn
@@ -36,9 +36,9 @@ Now the program starts retrieving all the necessary base packages.
 
 When all packages have been extracted we must prepare [[GRUB]] for the Hurd when we reboot. Add the below entry to your `/boot/grub/menu.lst` file to boot the Hurd in single user mode (-s). Single user mode is needed only for the two reboots when running the Native Install.
 
-    title GNU (kernel GNUmach 1.3)
+    title GNU (kernel GNUmach 1.5)
       root (hd0,2)
-      kernel /boot/gnumach.gz root=device:hd0s3 -s
+      kernel /boot/gnumach-1.5-486.gz root=device:hd0s3 -s
       module /hurd/ext2fs.static                           \
            --multiboot-command-line=${kernel-command-line} \
            --host-priv-port=${host-port}                   \
