--- a/glibc.mdwn
+++ b/glibc.mdwn
@@ -1,5 +1,5 @@
-[[!meta copyright="Copyright © 2007, 2008, 2010, 2011, 2012, 2013 Free Software
-Foundation, Inc."]]
+[[!meta copyright="Copyright © 2007, 2008, 2010, 2011, 2012, 2013, 2015 Free
+Software Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -35,9 +35,9 @@ have been removed.
 
 ## [[Hurd-specific Port|hurd/glibc]]
 
-An important part of the [[Hurd]] actually resides in glibc: here, the POSIX
+An important part of the [[Hurd]] actually resides in glibc: here, the system
 interfaces are implemented on top of the [[Hurd IPC protocols|hurd/interface]].
-This is different to the Linux port, where most simple POSIX interfaces are in
+This is different to the Linux port, where most simple system interfaces are in
 fact simply forwarded to/implemented as [[system_call]]s.
 
 
