--- a/microkernel/mach/history.mdwn
+++ b/microkernel/mach/history.mdwn
@@ -216,4 +216,5 @@ IRC, freenode, #hurd, 2013-07-04:
 ---
 
 [[!tag open_issue_documentation]]Update for [[GNU Mach 1.4
-release|news/2013-09-27]], and [[GNU Mach 1.5|news/2015-04-10-releases]].
+release|news/2013-09-27]], [[GNU Mach 1.5|news/2015-04-10-releases]], [[GNU
+Mach 1.6|news/2015-10-31-releases]].
