--- a/faq/release.mdwn
+++ b/faq/release.mdwn
@@ -13,13 +13,13 @@ License|/fdl]]."]]"""]]
 
 [[!meta title="When will the Hurd be released?"]]
 
-GNU Hurd 0.6 has been [[released on 2015-04-10|news/2015-04-10-releases]],
-along with GNU Mach 1.5 and GNU MIG 1.5.  Read about the [[Hurd's
+GNU Hurd 0.7 has been [[released on 2015-10-31|news/2015-10-31-releases]],
+along with GNU Mach 1.6, and GNU MIG 1.6.  Read about the [[Hurd's
 status|hurd/status]].
 
 > OK, but when will it be finished?
 
-Well, is the Linux kernel considered to be really "finished"?  Hurd 0.6 does
+Well, is the Linux kernel considered to be really "finished"?  Hurd 0.7 does
 work, but of course it can still become better -- beginning to
 [[contribute|contributing]] and [[joining us|how_many_developers]] is the best
 way for you to help achieve that.  :-)
