--- a/history.mdwn
+++ b/history.mdwn
@@ -114,6 +114,8 @@ mailing lists.
     (2013-09-27)
   * [[GNU Hurd 0.6, GNU Mach 1.5, GNU MIG 1.5
     released|news/2015-04-10-releases]] (2015-04-10)
+  * [[GNU Hurd 0.7, GNU Mach 1.6, GNU MIG 1.6
+    released|news/2015-10-31-releases]] (2015-10-31)
 
 
 # An Incomplete GNU Hurd Timeline
@@ -170,4 +172,5 @@ mailing lists.
   * [...]
   * 2015: [...], [[GNU Hurd 0.6, GNU Mach 1.5, GNU MIG 1.5
     released|news/2015-04-10-releases]], [[Debian GNU/Hurd
-    2015|news/2015-04-29-debian_gnu_hurd_2015]].
+    2015|news/2015-04-29-debian_gnu_hurd_2015]], [[GNU Hurd 0.7, GNU Mach 1.6,
+    GNU MIG 1.6 released|news/2015-10-31-releases]].
