news/2015-10-31-releases: Fix links to release tarballs

--- a/news/2015-10-31-releases.mdwn
+++ b/news/2015-10-31-releases.mdwn
@@ -18,9 +18,7 @@ else="
 
 [[!cut id="full_news" text="""
 
-We're pleased to announce new releases!  These may be downloaded from
-<ftp://ftp.gnu.org/gnu/hurd/>, <http://ftp.gnu.org/gnu/hurd/>, or checked out
-of Git, <http://git.savannah.gnu.org/cgit/hurd>.
+We're pleased to announce new releases!
 
   * **GNU Hurd 0.7**,
     [NEWS](http://git.savannah.gnu.org/cgit/hurd/hurd.git/tree/NEWS?id=v0.7):
@@ -43,7 +41,9 @@ of Git, <http://git.savannah.gnu.org/cgit/hurd>.
         The code has been updated to work with newer versions of the compiler
         and libc, and numerous bugs have been fixed throughout the code.
 
-    SHA1 checksums:
+    Release tarballs may be downloaded from <ftp://ftp.gnu.org/gnu/hurd/>,
+    <http://ftp.gnu.org/gnu/hurd/>, or checked out of Git,
+    <http://git.savannah.gnu.org/cgit/hurd/hurd.git>.  SHA1 checksums:
 
         a735a07687f7996face3bd310af2254192a02f40  hurd-0.7.tar.bz2
         d10b3c1de191ac88425aa30a03c4130e2a883b14  hurd-0.7.tar.bz2.sig
@@ -88,7 +88,9 @@ of Git, <http://git.savannah.gnu.org/cgit/hurd>.
         ANSI escape sequences are now handled when using `printf'.  This fixes
         the formatting of messages printed by various Linux drivers.
 
-    SHA1 checksums:
+    Release tarballs may be downloaded from <ftp://ftp.gnu.org/gnu/gnumach/>,
+    <http://ftp.gnu.org/gnu/gnumach/>, or checked out of Git,
+    <http://git.savannah.gnu.org/cgit/hurd/gnumach.git>.  SHA1 checksums:
 
         73e09c43955ef2e3459b2877b5e6d6bbe517b8c3  gnumach-1.6.tar.bz2
         96ff426b3b94acf327a88f25c80ab5b5f26ed94a  gnumach-1.6.tar.bz2.sig
@@ -111,7 +113,9 @@ of Git, <http://git.savannah.gnu.org/cgit/hurd>.
         * MIG now emits RPC lookup functions that are declared `static inline'
           improving compatibility with newer dialects of C.
 
-    SHA1 checksums:
+    Release tarballs may be downloaded from <ftp://ftp.gnu.org/gnu/mig/>,
+    <http://ftp.gnu.org/gnu/mig/>, or checked out of Git,
+    <http://git.savannah.gnu.org/cgit/hurd/mig.git>.  SHA1 checksums:
 
         a9a4b5666834afe8fb861453c5b3ef324201f1d3  mig-1.6.tar.bz2
         93562c45bbda40ad31f74f6f2fd0c064ef8f0ec5  mig-1.6.tar.bz2.sig
@@ -128,11 +132,10 @@ of Git, <http://git.savannah.gnu.org/cgit/hurd>.
 
   * **glibc-2.19-hurd+libpthread-20151031**
 
-    The snapshot may be downloaded from <ftp://alpha.gnu.org/gnu/hurd/>,
+    Snapshot tarballs may be downloaded from <ftp://alpha.gnu.org/gnu/hurd/>,
     <http://alpha.gnu.org/gnu/hurd/>, or checked out of Git,
-    <http://git.savannah.gnu.org/cgit/hurd>.
-
-    SHA1 checksums:
+    <http://git.savannah.gnu.org/cgit/hurd/glibc.git> and
+    <http://git.savannah.gnu.org/cgit/hurd/libpthread.git>.  SHA1 checksums:
 
         5b709297f8622444695f13723f77dfc8754b8ed9  glibc-2.19-hurd+libpthread-20151031.tar.bz2
         b970e604368fd80420ef029bb1c86fc2f7b2c382  glibc-2.19-hurd+libpthread-20151031.tar.bz2.sig
