--- a/open_issues/strict_aliasing.mdwn
+++ b/open_issues/strict_aliasing.mdwn
@@ -1,4 +1,5 @@
-[[!meta copyright="Copyright © 2012, 2013 Free Software Foundation, Inc."]]
+[[!meta copyright="Copyright © 2012, 2013, 2015 Free Software Foundation,
+Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -42,3 +43,10 @@ License|/fdl]]."]]"""]]
       use techniques that assume aliasing
     <braunr> exactly
     <teythoon> right, I agree
+
+
+# 2015-10-30
+
+Noticed that there are no `warning: dereferencing type-punned pointer will
+break strict-aliasing rules [-Wstrict-aliasing]` diagnostics when compiling a
+[[GDB|binutils]] build's MIG-generated stub files.
